fixed horizontal scrolling // added dropdown search menu // minor visual tweaks

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -58,3 +58,17 @@ ul {
     margin: 0;
     padding: 0;
 }
+
+.main {
+    position: relative;
+    transition: top 0.5s;
+    top: 0;
+
+    &.top-shift {
+        top: 2.8125rem;
+
+        @media(min-width: 65rem) {
+            top: 0;
+        }
+    }
+}
