--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -7,11 +7,11 @@
 
     &.blur-background {
         &::before {
-            position: absolute;
-            z-index: 1;
+            position: fixed;
+            z-index: 10;
             content: "";
-            width: 100dvh;
-            height: 100dvh;
+            width: 100%;
+            height: 100%;
             background: #00000080;
             backdrop-filter: blur(0.3125rem);
         }
@@ -37,6 +37,7 @@
         .navigation-panel {
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 1.25rem;
             padding: 0 1rem;
 
@@ -49,51 +50,66 @@
                 aspect-ratio: 1/1;
             }
 
+            .search-menu-button {
+                border: 0;
+                background: none;
+                cursor: pointer;
+
+                @media(min-width: 65rem) {
+                    display: none;
+                }
+            }
+
             .search-bar {
-                display: flex;
+                display: none;
+                position: absolute;
+                box-shadow: 0 0 0.8125rem 0 $color-box-shadow;
+                border-radius: 0.4375rem;
+                top: 100%;
+                min-width: 17.5rem;
+                background-color: $color-white;
 
                 @media(min-width:75rem) {
                     justify-content: center;
                 }
 
                 @media(min-width:65rem) {
-                    box-shadow: 0 0 0.8125rem 0 $color-box-shadow;
-                    border-radius: 0.4375rem;
+                    display: flex;
+                    position: static;
+                }
+
+                &.open-search-menu {
+                    display: flex;
                 }
 
                 .search-submit {
                     background: none;
                     border: 0;
                     cursor: pointer;
-
-                    @media(min-width:75rem) {
-                        padding-left: 1rem;
-                    }
+                    padding-left: 1rem;
 
                     svg {
-                        @media(min-width: 75rem) {
-                            width: 1rem;
-                        }
+                        width: 1rem;
                     }
                 }
 
                 .search-input {
-                    display: none;
+                    display: flex;
+                    border: 0;
+                    padding-left: 0.25rem;
+                    max-width: 28.75rem;
+                    height: 2.8125rem;
 
-                    @media(min-width:65rem) {
-                        display: flex;
-                        border: 0;
-                        padding-left: 0.25rem;
-                        height: 2.8125rem;
+                    @media (min-width:65rem) {
                         width: 25.25rem;
-                        outline: none;
+                    }
 
-                        &::placeholder {
-                            opacity: 0.5;
-                            font-size: 0.8125rem;
-                            letter-spacing: 0.10625rem;
-                            color: #616161;
-                        }
+                    &::placeholder {
+                        opacity: 0.5;
+                        font-size: 0.8125rem;
+                        letter-spacing: 0.10625rem;
+                        color: #616161;
+
                     }
                 }
             }
@@ -127,17 +143,14 @@
     }
 
     .header-bottom {
-        position: absolute;
+        position: fixed;
         width: 18.4375rem;
         height: 100dvh;
         z-index: 10;
-        padding: 0;
-        margin: 0;
         background: $color-white;
         top: 0;
         right: -100%;
         transition: 0.5s right;
-        display: flex;
 
         @media(min-width:75rem) {
             display: flex;
@@ -150,7 +163,6 @@
         }
 
         &.open-nav-menu {
-            display: flex;
             right: 0;
         }
 
